--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -9,28 +9,45 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="Journal Entry.styles.css" />
     <link rel="icon" href="data:,">
-    <link href="css/app.css" rel="stylesheet" />
-    <link href="css/journal.css" rel="stylesheet" />
-    <link href="css/navbar.css" rel="stylesheet" />
-    <link href="css/calender.css" rel="stylesheet" />
-    <link href="css/dashboard.css" rel="stylesheet" />
-    <link href="css/setting.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <link href="css/landing.css" rel="stylesheet" />
 </head>
-
 <body>
-
     <div class="status-bar-safe-area"></div>
-
     <div id="app">Loading...</div>
-
-    <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
 
     <script src="_framework/blazor.webview.js" autostart="false"></script>
 
-</body>
+    <!-- Markdown Editor Helper Functions -->
+    <script>
+        window.insertMarkdown = function (textarea, before, after) {
+            const start = textarea.selectionStart;
+            const end = textarea.selectionEnd;
+            const text = textarea.value;
+            const selectedText = text.substring(start, end);
 
+            const newText = text.substring(0, start) + before + selectedText + after + text.substring(end);
+            textarea.value = newText;
+
+            // Trigger input event to update Blazor binding
+            textarea.dispatchEvent(new Event('input', { bubbles: true }));
+
+            // Set cursor position
+            const newPosition = start + before.length + selectedText.length;
+            textarea.setSelectionRange(newPosition, newPosition);
+            textarea.focus();
+        };
+
+        window.insertLink = function (textarea) {
+            const url = prompt("Enter URL:", "https://");
+            if (url) {
+                const linkText = prompt("Enter link text:", "Link");
+                if (linkText) {
+                    const markdown = `[${linkText}](${url})`;
+                    window.insertMarkdown(textarea, markdown, '');
+                }
+            }
+        };
+    </script>
+</body>
 </html>
